--- a/web_static/styles/3-header.css
+++ b/web_static/styles/3-header.css
@@ -1,8 +1,13 @@
 header {
-    background: white url("../images/logo.png");
-    background-repeat: no-repeat;
-    background-position: 20px center;
-    height: 70px;
-    width: 100%;
-    border-bottom: 1px solid #CCCCCC;
+      background-color: white;
+      height: 70px;
+      width: 100%;
+      border-bottom: 1px solid #CCCCCC;
+}
+.logo {
+      background-image: url(../images/logo.png);
+      position: absolute;
+      width: 136px;
+      height: 60px;
+      left: 20px;
 }
