--- a/web_static/styles/5-filters.css
+++ b/web_static/styles/5-filters.css
@@ -1,51 +1,36 @@
-.filters {
-    background: white;
+section.filters {
+    background-color: white;
     height: 70px;
     width: 100%;
     border: 1px solid #DDDDDD;
     border-radius: 4px;
     display: flex;
-    align-items: center;
-    justify-content: flex-start;
 }
-
-.filters button {
+section.filters button {
     font-size: 18px;
     background-color: #FF5A5F;
     color: #FFFFFF;
     height: 48px;
     width: 20%;
-    border: none;
+    border: 0;
     border-radius: 4px;
-    margin-right: 30px;
-    margin-left: auto;
-    outline: none;
+    margin: auto 30px;
 }
-
-.filters button:hover {
-    opacity: 0.9;
+section.filters button:hover {
+    opacity: 90%;
 }
-
-.locations, .amenities {
+section.filters div.locations, section.filters div.amenities {
     height: 100%;
     width: 25%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    position: relative;
-}
-
-.locations {
     border-right: 1px solid #DDDDDD;
+    
 }
-
-.locations h3, .amenities h3 {
+div.locations h3, div.amenities h3  {
     font-weight: 600;
-    margin: 0 0 2px 20px;
+    margin-bottom: 0px;
 }
-
-.locations h4, .amenities h4 {
+div.locations h4, div.amenities h4 {
     font-weight: 400;
     font-size: 14px;
-    margin: 2px 0 0 20px;
+    margin: 4px auto;
 }
