--- a/web_static/styles/7-places.css
+++ b/web_static/styles/7-places.css
@@ -1,26 +1,26 @@
 .places {
-    display:flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    margin-bottom: 50px;
+  max-width: 1000px;
+  margin: 0px auto;
+  font-size: 30px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
-
 .places h1 {
-    font-size: 30px;
-    width: 100%;
-    margin-left: 20px;
+  width: 100%;
+  padding-left: 22px;
 }
 
 .places article {
-    width: 390px;
-    padding: 20px;
-    margin: 20px;
-    border: 1px solid #FF5A5F;
-    border-radius: 4px;
-    display: flex;
-    justify-content: center;
+  width: 390px;
+  padding: 20px;
+  margin: 20px;
+  border: 1px solid red;
+  border-radius: 4px;
+  display: flex;
+  justify-content: center;
 }
 
 .places article h2 {
-    font-size: 30px;
+  font-size: 30px;
 }
